--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
     testImplementation 'com.codeborne:selenide:5.19.0'
 
-    // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
-    implementation 'org.seleniumhq.selenium:selenium-java:4.1.4'
+//     https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
+//    implementation 'org.seleniumhq.selenium:selenium-java:4.1.4'
 
 }
 
